# C_CALCULATOR

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  tokens.h
tests/: test.c
